<resources>
    <string name="app_name">POC_APP</string>
    <string name="action_settings">Settings</string>
    <string name="enter_legal_name">Enter Legal Name</string>
    <string name="register">Register</string>
    <string name="enter_spiritual_name">Enter Spiritual Name</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="Enter_User_Name">Enter User Name</string>
    <string name="logout">Logout</string>
    <string name="date_default">12th Feb,1997</string>
</resources>
